chore(seeds): update seeding and related project changes
